KAFKA-14405: unify handling of Streams-controlled client configs
Kafka Streams forces several underlying consumer and producer client
configs. They were handled by two parallel code paths: a checker driven by
the NON_CONFIGURABLE_* arrays that scanned the user-provided prefix maps,
and direct put() calls applied after the user props were merged, which
silently ignored overrides of group.id and partition.assignment.strategy.

Replace both with a single mechanism:
- Split the client config sets into DEFAULT_* (overridable defaults, seeded
  before the user props) and CONTROLLED_* (values the user cannot override).
- overwriteControlledConfig() logs a warning when the user set a different
  value, then applies the Streams value. enforceControlledConsumerConfigs
  and enforceControlledProducerConfigs apply it to the fully-assembled config
  map, so an override supplied under any prefix is caught in one place.
- group.id and partition.assignment.strategy are enforced through the same
  helper on the main consumer.

Overrides of group.id and partition.assignment.strategy are now logged and
ignored instead of silently ignored. Controlled-config warnings are logged
at WARN (previously a mix of ERROR and WARN), and
max.in.flight.requests.per.connection is verified for the producer only.